kubernetes/deployment-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: myapp
  namespace: chat-aap
spec:
  replicas: 1
  selector:
    matchLabels:    
      app: backend
  template:
    metadata: 
      labels:
        app: backend
    spec:
      containers:
      - name: chatapp-backend
        image: rishikesh991/chatapp-backend:latest
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        ports:
        - containerPort: 5001
        resources:
            limits:
             memory: "256Mi"
             cpu: "500m"
