kubernetes/deployment-frontent.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: myapp-frontend
  namespace: chat-aap
spec:
  replicas: 1
  selector:
    matchLabels:    
      app: frontend
  template:
    metadata: 
      labels:
        app: frontend
    spec:
      containers:
      - name: chatapp-frontend
        image: rishikesh991/chatapp-frontent:latest
        
        ports:
        - containerPort: 80
