kubernetes/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: chat-aap
spec:
  selector:
    app: backend
  ports:
  - port: 5001
    targetPort: 5001

  type: ClusterIP
