kubernetes/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: chat-aap
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
